test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/extra_credit/plx1_sizeof_incr_postfix.plx
pub fn main(none) i32 {
    x: i32 = 0
    return sizeof(x)++
}
